syntax = "proto3";
option go_package = "github.com/0x00b/gobbq/example/exampb;exampb";
package exampb;

import "bbq.proto";
import "google/protobuf/empty.proto";
 
message SayHelloRequest{
	string text = 1;

	uint64 CLientID = 2;
}

message SayHelloResponse{
	string text = 1;
}

enum Enum{
	XXX =0;
	XXX2 = 1;
}

message EchoProperty{
	string Text = 1 [(bbq.field) = {tag:"Key" mgo:MGO_ID}];
	SayHelloRequest test=2;
	repeated google.protobuf.Empty test2 = 3; //先不支持import类型
	map<int32, string> test3 = 4;
	bytes test4 = 5;
	sfixed64 test5 = 6;
	sfixed32 test6 = 7;
	Enum TEST7 = 8;
	sint32 test8 = 9;
	repeated sint32 test9 = 10;
}

service Echo {
	option (bbq.service_type) = Service;

	rpc SayHello(SayHelloRequest) returns(SayHelloResponse) {}
}

service EchoEty {
	option (bbq.service_type) = Entity;

	rpc SayHello(SayHelloRequest) returns(SayHelloResponse) {}
}

service EchoSvc2 {
	option (bbq.service_type) = Service;

	rpc SayHello(SayHelloRequest) returns(SayHelloResponse) {}
}

// 客户端
service Client {
	option (bbq.service_type) = Entity;

	rpc SayHello(SayHelloRequest) returns(SayHelloResponse) {}
}


// 客户端
service NoResp {
	option (bbq.service_type) = Entity;

	rpc SayHello(SayHelloRequest) returns(google.protobuf.Empty) {}
}
